--- a/parallel_mcts_research/parallel_mcts_research.vcxproj
+++ b/parallel_mcts_research/parallel_mcts_research.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{5AF6889D-940F-3F55-B26B-BB9686B2BA3D}</ProjectGuid>
     <RootNamespace>parallel_mcts_research</RootNamespace>
     <Keyword>Qt4VSv1.0</Keyword>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformMinVersion>10.0.17763.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -181,6 +181,8 @@
     <ClInclude Include="games\gomoku\gamestate.h" />
     <ClInclude Include="games\tictactoe\gamemove.h" />
     <ClInclude Include="games\tictactoe\gamestate.h" />
+    <ClInclude Include="games\xiang_qi\gamemove.h" />
+    <ClInclude Include="games\xiang_qi\gamestate.h" />
     <ClInclude Include="mcts.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="rng.h" />
